feat(lock): 实现分布式锁核心模板与切面逻辑
- 新增 DefaultLockTemplate，实现单锁、多锁、读写锁等编程式锁支持
- 增加参数校验和 key 规范化，避免非法锁类型和空白 key
- 实现 DistributedLockAspect，支持基于注解分布式锁自动切面拦截
- 实现 LockKeyNormalizer 工具类，统一锁 key 格式校验与前缀处理
- 编写 DefaultLockTemplate 单元测试，覆盖参数校验及锁信息构建
- 编写 DistributedLockAspect 单元测试，验证注解解析及异常处理
- 新增 LockInfo 数据模型，封装锁相关参数与展示逻辑